driver: general cleanup, and adding code to invoke SMCs

--- a/driver/Makefile
+++ b/driver/Makefile
@@ -1,10 +1,15 @@
 ifneq ($(KERNELRELEASE),)
 
-obj-m := driver.o
+ccflags-y := -I$(M)/../include
+obj-m := kevlar.o
+kevlar-y := driver.o smc.o
 
 else
 
-KERNELDIR ?= /lib/modules/$(shell uname -r)/build
+-include ../config.mk
+export KERNELDIR ?= /lib/modules/$(shell uname -r)/build
+export ARCH ?= arm
+export CROSS_COMPILE ?= arm-linux-gnueabihf-
 PWD := $(shell pwd)
 
 default:
